syntax = "proto3";

package accounts;

option go_package = "./gen";

service AccountService {
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc GetAccounts(GetAccountsRequest) returns (stream GetAccountsResponse);
}

message GetAccountRequest {
  string ethereum_address = 1;
  string crypto_signature = 2;
}

message GetAccountResponse {
  double gastoken_balance = 1;
  int32 wallet_nonce = 2;
}

message GetAccountsRequest {
  repeated string ethereum_addresses = 1;
  string erc20_token_address = 2;
}

message GetAccountsResponse {
  string ethereum_address = 1;
  double erc20_balance = 2;
}
